# C-Libs-for-Node

./: .gitignore  LICENSE
.github/workflows/: github-actions.yml
calculation-lib/: calculation.cpp
emscripten-base-example/: CMakeLists.txt  README.md
emscripten-base-example/build.emscripten/: client.js  client.wasm
emscripten-base-example/src/: Application.cpp  calculation.h  libsweepcalculator.h
emscripten-base-example/test/: index.js
node-gyp-base-example/: README.md  binding.gyp  package-lock.json  package.json
node-gyp-base-example/src/: MathLibrary.lib  binding.cpp
node-gyp-base-example/src/include/: calculation.h
node-gyp-base-example/test/: binding.node  index.js
